--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@bigcommerce/eslint-config": "^2.6.1",
+    "@netlify/plugin-nextjs": "^4.28.6",
     "@types/cookie": "^0.5.1",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
